Addressed FindBugs warning (kinda silly, though, it's still a "new Double()" underneath)